# online-auction

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.md  requirements.txt
accounts/: admin.py  forms.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_auto_20211209_1951.py  0003_auto_20211209_1951.py  0004_auto_20211209_2002.py
config/: .env.example  .env.latest  .env.latestF  .env.sample  settings.py  urls.py
items/: admin.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
items/migrations/: 0001_initial.py  0002_item_highest_bidder.py  0002_remove_item_is_expirated.py  0003_auto_20211209_2155.py  0004_auto_20211209_2210.py  0005_auto_20211210_1317.py  0006_auto_20211211_1051.py  0007_auto_20211211_1756.py  0007_auto_20211211_1807.py  0008_auto_20211211_1832.py  0008_auto_20211212_0120.py  0009_auto_20211211_1938.py  0009_auto_20211212_0955.py  0010_auto_20211211_2039.py  0010_auto_20211212_0956.py  0011_auto_20211212_1204.py  0011_remove_item_min_bid.py  0012_remove_item_bidder.py  0013_auto_20211212_0959.py  0014_auto_20211212_1705.py  0014_merge_20211212_1620.py  0015_auto_20211212_1707.py  0016_auto_20211212_1707.py  0017_auto_20211212_1708.py  0018_auto_20211212_1709.py  0019_merge_20211212_2253.py  0020_auto_20211213_1930.py  0021_auto_20211213_1934.py  0022_auto_20211213_1938.py  0023_auto_20211213_1942.py
templates/: _base.html
