[tool.poetry]
name = "online-auction-api"
version = "0.1.0"
description = ""
authors = ["anas-abusaif <anasabusief@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "3.1.4"
django-allauth = "0.43.0"
django-crispy-forms = "1.10.0"
django-debug-toolbar = "3.2"
whitenoise = "5.2.0"
djangorestframework = "^3.12.4"
djangorestframework-simplejwt = "^5.0.0"
django-cors-headers = "^3.10.1"
gunicorn = "^20.1.0"
psycopg2-binary = "^2.9.2"
django-storages = "^1.12.3"
boto3 = "^1.20.23"
django-environ = "^0.8.1"
django-nose = "^1.4.7"
Faker = "^10.0.0"
coverage = "^6.2"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
